fix reel alignment

--- a/src/interface/helpButton/style.css
+++ b/src/interface/helpButton/style.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 12px;
   right: 12px;
-  background-image: url("/images/help.svg");
+  background-image: url('/images/help.svg');
   height: min(40px, 10vw);
   width: min(40px, 10vw);
   cursor: pointer;
